# HarmonyDesk

./: .gitignore  DEBUG_LOG.md  DEVELOPMENT.md  DEVSTUDIO_SETUP.md  PROTOCOL.md  QUICKSTART.md  README.md  TESTING.md  UI_COMPONENTS.md  VIDEO_DECODER.md  build.sh
.claude/: settings.json
harmonyos/: .gitignore  build-profile.json5  fix_project.sh  oh-package-lock.json5  oh-package.json5  package.json
harmonyos/AppScope/: app.json5
harmonyos/AppScope/resources/base/element/: string.json
harmonyos/entry/: oh-package.json5
harmonyos/entry/ohos/rust/: Cargo.toml  build.rs  build.sh
harmonyos/entry/ohos/rust/.cargo/: config.toml
harmonyos/entry/ohos/rust/src/: core.rs  lib.rs  protocol.rs  video.rs
harmonyos/entry/ohos/rust/src/rustdesk/: mod.rs
harmonyos/entry/src/main/: module.json5
harmonyos/entry/src/main/ets/entryability/: EntryAbility.ets
harmonyos/entry/src/main/ets/pages/: Index.ets  RemoteDesktop.ets
harmonyos/hvigor/: hvigor-config.json5  hvigor-wrapper.json5
harmonyos/idea/: .gitignore
ohos/: build-profile.json5  package-lock.json
ohos/AppScope/: app.json5
ohos/AppScope/resources/base/element/: string.json
ohos/entry/: build-profile.json5
ohos/entry/ohos/rust/: Cargo.toml  build.rs  build.sh
ohos/entry/ohos/rust/.cargo/: config.toml
ohos/entry/ohos/rust/src/: core.rs  lib.rs  log_collector.rs  protocol.rs  video.rs
ohos/entry/ohos/rust/src/rustdesk/: mod.rs
ohos/entry/ohos/rust/targets/: aarch64-unknown-linux-ohos.json
ohos/entry/src/main/: module.json5  ts-native.ets
ohos/entry/src/main/cpp/: CMakeLists.txt  dummy.cpp
(+13 files in other folders)
